# CarbonFootprintTracker

./: .env.example  .gitignore  docker-compose.dev.yaml  docker-compose.yaml  server.bat
backend/: Dockerfile  pyproject.toml
backend/base/: settings.py  urls.py
db/: Dockerfile  init.sh
frontend/: .eslintrc.json  Dockerfile  next.config.js  package.json
