[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for the site"
authors = ["AkshuAgarwal"]
readme = "README.md"
license = ""

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2"
psycopg2-binary = "^2.9.6"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.0"
django-cors-headers = "^4.2.0"
djangorestframework-orjson = "^0.1.3"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
